[metadata]
name = django-caretaker
version = 0.1.3
description = A Django app for backups using S3 storage.
url = https://github.com/MartinPaulEve/django-caretaker
author = Martin Paul Eve
author_email = martin@eve.gd
license = Apache License 2
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.0
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    Django >= 4.0
    boto3
    rich
    humanize
    mock
    testfixtures
    moto
    python-crontab==2.2.3
